src/objects/Systems_Info__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Basic_Navigation_Functions__c</fullName>
        <label>Basic Navigation/Functions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>For manual entry of due date by content developer</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Links__c</fullName>
        <label>External Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_To_Links__c</fullName>
        <label>How To Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_to_Access__c</fullName>
        <label>How to Access</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>System_Overview__c</fullName>
        <label>System Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <type>TextArea</type>
    </fields>
    <label>Systems Info</label>
    <pluralLabel>Systems Infos</pluralLabel>
</CustomObject>